tools/k3d/backend/helm_not_recom/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: studio-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: picserver.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
